@@ -1,8 +1,7 @@
 package locationservice;
 
-import locationservice.LocationEntity;
-import locationservice.LocationService;
-import locationservice.LocationController;
+import model.LocationDTO;
+import model.UserDTO;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 
@@ -10,6 +9,8 @@ import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.test.web.servlet.MockMvc;
 
+import java.time.Instant;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.mockito.Mockito.when;
@@ -26,27 +27,34 @@ class LocationControllerTest {
     @MockBean
     private LocationService locationService;
 
+    @MockBean
+    private LocationMapper locationMapper;
+
     @Test
     void testUpdateLocation() throws Exception {
-        LocationEntity alice = new LocationEntity("user1", "Alice", 48.13, 11.57);
-        when(locationService.updateLocation("user1", "Alice", 48.13, 11.57)).thenReturn(alice);
+        String userId = "user1";
+        double latitude = 48.13;
+        double longitude = 11.57;
+        Location location = new Location(userId, latitude, longitude );
+        
+        when(locationService.updateLocation(userId, latitude, longitude)).thenReturn(location);
+        
+        when(locationMapper.toDTO(location)).thenReturn(new LocationDTO(userId, latitude, longitude));
 
         mockMvc.perform(post("/location/update")
-                        .param("id", "user1")
-                        .param("name", "Alice")
-                        .param("latitude", "48.13")
-                        .param("longitude", "11.57"))
+                        .param("userId", userId) 
+                        .param("latitude", String.valueOf(latitude))
+                        .param("longitude", String.valueOf(longitude)))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").value("user1"))
-                .andExpect(jsonPath("$.name").value("Alice"))
-                .andExpect(jsonPath("$.latitude").value(48.13))
-                .andExpect(jsonPath("$.longitude").value(11.57));
+                .andExpect(jsonPath("$.userId").value(userId))
+                .andExpect(jsonPath("$.latitude").value(latitude))
+                .andExpect(jsonPath("$.longitude").value(longitude));
     }
 
     @Test
     void testGetAllLocations() throws Exception {
-        List<LocationEntity> list = List.of(new LocationEntity("u1", "A", 0.0, 0.0),
-                                           new LocationEntity("u2", "B", 1.0, 1.0));
+        List<Location> list = List.of(new Location("u1", 0.0, 0.0),
+                                           new Location("u2", 1.0, 1.0));
         when(locationService.getAll()).thenReturn(list);
 
         mockMvc.perform(get("/location/all"))
@@ -57,8 +65,8 @@ class LocationControllerTest {
 
     @Test
     void testGetLocationById() throws Exception {
-        LocationEntity alice = new LocationEntity("user1", "Alice", 48.13, 11.57);
-        when(locationService.getLocation("user1")).thenReturn(java.util.Optional.of(alice));
+        Location alice = new Location("user1", 48.13, 11.57);
+        when(locationService.getLocation("user1")).thenReturn(alice);
 
         mockMvc.perform(get("/location/user1"))
                 .andExpect(status().isOk())
@@ -66,9 +74,12 @@ class LocationControllerTest {
     }
 
     @Test
-    void testSearchNearby() throws Exception {
-        List<LocationEntity> nearby = List.of(new LocationEntity("u1", "A", 48.13, 11.57));
-        when(locationService.searchWithinRadius(48.13, 11.57, 5.0)).thenReturn(nearby);
+    public void testSearchPartnerByArea() throws Exception {
+        String userId = "user1";
+        double radius = 10.0;
+        List<String> nearbyUserIds = Arrays.asList("user2", "user3");
+        
+        when(locationService.searchPartnerByArea(userId, radius)).thenReturn(nearbyUserIds);
 
         mockMvc.perform(get("/location/nearby")
                         .param("latitude", "48.13")
